samples/_failures_safe/1761095859_0acaf9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_947bfc9f.c: In function ‘main’:
./samples/SAFE/__tmp_947bfc9f.c:160:39: error: expected ‘]’ at end of input
  160 |         process_trigger(sm, triggers[i
      |                                       ^
      |                                       ]
./samples/SAFE/__tmp_947bfc9f.c:160:9: error: expected declaration or statement at end of input
  160 |         process_trigger(sm, triggers[i
      |         ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_947bfc9f.c:160:9: error: expected declaration or statement at end of input
